Support Records as Beans (#459)
* Add support for JLS records as beans
* Avoid `Map.copyOf` as iteration is random